feat(core) Add styling, Display input; Update answer()
Display Input
  -Let user see numbers when typing them in
Update Answer()
  -cb was not coming back as function, so I had to reassign
    the value we got back to the actual function

--- a/styles/master.css
+++ b/styles/master.css
@@ -1,6 +1,36 @@
 
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.answer{
+  width: 350px;
+  /*align-items: stretch;*/
+  height: 100px;
+  line-height: 100px;
+  background-color: lightgray;
+  text-align:right;
+  margin: auto 0;
+  font-size: 40px;
+}
+
+.calc_buttons {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+
+.column_op {
+  display: flex;
+  flex-direction: column;
+}
+
 
 .calc_buttons button {
-  font-size: 20px;
+  font-size: 30px;
   margin: 10px;
+  height: 50px;
+  width: 70px;
 }
