--- a/styles/master.css
+++ b/styles/master.css
@@ -1,8 +1,17 @@
-
 body {
+  display: flex;
+  justify-content: center;
+}
+
+.calc_whole {
   display: flex;
   flex-direction: column;
   align-items: center;
+  border: 3px solid gray;
+  border-radius: 15px;
+  background-color: gray;
+  width: 380px;
+  padding-top: 10px;
 }
 
 .answer{
